Ура, я домучился с тестами. Вроде все ок, уверен в своем коде)