@@ -1,13 +1,10 @@
-package serverTest;
+package serverTest.handlers;
 
-import com.google.gson.Gson;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.AfterEach;
-import server.HttpTaskServer;
-import taskManager.interfaces.TaskManager;
-import taskManager.memory.InMemoryTaskManager;
+import serverTest.HttpManagerTest;
 import tasksModels.Status;
 import tasksModels.Task;
 
@@ -22,41 +19,30 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-public class HttpTaskManagerTasksTest {
+public class HttpTaskHandlerTest extends HttpManagerTest {
 
-    // создаём экземпляр InMemoryTaskManager
-    TaskManager manager = new InMemoryTaskManager();
-    // передаём его в качестве аргумента в конструктор HttpTaskServer
-    HttpTaskServer taskServer = new HttpTaskServer(manager);
-    Gson gson = HttpTaskServer.getGson();
-    String TASK_DEFAULT_URI = "http://localhost:8080/tasks";
-
-    public HttpTaskManagerTasksTest() throws IOException {
-    }
+    private final String TASK_DEFAULT_URI = URL + "/tasks";
 
     @BeforeEach
     public void setUp() {
-        manager.deleteAll();
-        taskServer.start();
+        super.setUp();
     }
 
     @AfterEach
     public void shutDown() {
-        taskServer.stop();
+        super.shutDown();
     }
 
+    @Override
     @Test
-    public void testAddTask() throws IOException, InterruptedException {
-        // создаём задачу
-        Task task = new Task("Test 2", "Testing task 2",
-                Status.NEW, LocalDateTime.now(), 5);
-        // конвертируем её в JSON
-        String taskJson = gson.toJson(task);
+    public void createRequestTest() throws IOException, InterruptedException {
+        // конвертируем task в JSON
+        String taskJson = gson.toJson(task1);
+        System.out.println(taskJson);
 
         // создаём HTTP-клиент и запрос
         HttpClient client = HttpClient.newHttpClient();
-        URI url = URI.create(TASK_DEFAULT_URI);
-        HttpRequest request = HttpRequest.newBuilder().uri(url).POST(HttpRequest.BodyPublishers.ofString(taskJson)).build();
+        HttpRequest request = postRequest(TASK_DEFAULT_URI, taskJson);
 
         // вызываем рест, отвечающий за создание задач
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
@@ -68,19 +54,21 @@ public class HttpTaskManagerTasksTest {
 
         assertNotNull(tasksFromManager, "Задачи не возвращаются");
         assertEquals(1, tasksFromManager.size(), "Некорректное количество задач");
-        assertEquals("Test 2", tasksFromManager.getFirst().getName(), "Некорректное имя задачи");
+        assertEquals("Task 1", tasksFromManager.getFirst().getName(), "Некорректное имя задачи");
+
+        System.out.println(tasksFromManager.getFirst());
+
+        client.close();
     }
 
+    @Override
     @Test
     @DisplayName("DELETE TASK_DEFAULT_URI/{id} возвращает 200 при успешном удалении")
-    public void testDeleteTask() throws IOException, InterruptedException {
-        Task task = new Task("Test 3", "Testing task 3",
-                Status.NEW, LocalDateTime.now(), 5);
-        manager.createTask(task);
+    public void deleteRequestTest() throws IOException, InterruptedException {
+        manager.createTask(task1);
 
         HttpClient client = HttpClient.newHttpClient();
-        URI url = URI.create(TASK_DEFAULT_URI + "/" + task.getId());
-        HttpRequest request = HttpRequest.newBuilder().uri(url).DELETE().build();
+        HttpRequest request = deleteRequest(TASK_DEFAULT_URI + "/" + task1.getId());
 
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         assertEquals(200, response.statusCode());
@@ -89,44 +77,37 @@ public class HttpTaskManagerTasksTest {
         assertEquals(0, tasksFromManager.size(), "Задача не была удалена");
     }
 
+    @Override
     @Test
     @DisplayName("POST url/tasks возвращает 201 если создана или 400 если тело было составлено неверно")
-    public void testUpdateTask() throws IOException, InterruptedException {
-        Task task = new Task("Test 4", "Testing task 4",
-                Status.NEW, LocalDateTime.now(), 5);
-        manager.createTask(task);
+    public void updateRequestTest() throws IOException, InterruptedException {
+        manager.createTask(task1);
 
-        Task updatedTask = new Task(task.getId(), "Updated Test 4", task.getDescription(),
+        Task updatedTask = new Task(task1.getId(), "Updated Task 1", task1.getDescription(),
                 Status.DONE, LocalDateTime.now(), 10);
         String updatedTaskJson = gson.toJson(updatedTask);
 
         HttpClient client = HttpClient.newHttpClient();
-        URI url = URI.create(TASK_DEFAULT_URI);
-        HttpRequest request = HttpRequest.newBuilder().uri(url).POST(HttpRequest.BodyPublishers.ofString(updatedTaskJson)).build();
+        HttpRequest request = postRequest(TASK_DEFAULT_URI, updatedTaskJson);
 
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         assertEquals(201, response.statusCode());
 
         List<Task> tasksFromManager = manager.getTasksAsList();
         assertEquals(1, tasksFromManager.size(), "Некорректное количество задач");
-        assertEquals("Updated Test 4", tasksFromManager.get(0).getName(), "Задача не была обновлена");
-        assertEquals(Status.DONE, tasksFromManager.get(0).getStatus(), "Задача не была обновлена");
+        assertEquals("Updated Task 1", tasksFromManager.getFirst().getName(), "Задача не была обновлена");
+        assertEquals(Status.DONE, tasksFromManager.getFirst().getStatus(), "Задача не была обновлена");
     }
 
+    @Override
     @Test
     @DisplayName("GET /tasks возвращает в теле ответа массив задач в формате json")
-    public void shouldGetTasksList() throws IOException, InterruptedException {
-        Task task1 = new Task("Test 5", "Testing task 5",
-                Status.NEW, LocalDateTime.now(), 5);
-        Task task2 = new Task("Test 6", "Testing task 6",
-                Status.NEW, LocalDateTime.now().plusMinutes(10), 5);
+    public void getListRequestTest() throws IOException, InterruptedException {
         manager.createTask(task1);
         manager.createTask(task2);
 
         HttpClient client = HttpClient.newHttpClient();
-        URI url = URI.create(TASK_DEFAULT_URI);
-        HttpRequest request = HttpRequest.newBuilder().uri(url).GET().build();
-
+        HttpRequest request = getRequest(TASK_DEFAULT_URI);
         HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         assertEquals(200, response.statusCode());
 
